# llm-quant

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.beads/: metadata.json
.claude/agents/: alpha-researcher.md  backtester.md  macro-strategist.md  paper-monitor.md  polymarket-researcher.md  polymarket-risk-reviewer.md  portfolio-manager.md  risk-governance.md  robustness-analyst.md
.claude/commands/: backtest.md  data-contract.md  evaluate.md  governance.md  hypothesis.md  lifecycle.md  loop.md  mandate.md  paper.md  promote.md  report.md  research-spec.md  research.md  robustness.md  trade.md
.claude/hooks/: pre-tool-use.sh
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: reports.yml
config/: default.toml  governance.toml  macro-briefing.md  risk.toml  track-assignments.yaml  universe.toml
config/prompts/: trader_decision.md  trader_system.md
config/strategies/: benchmark.toml  contrarian.toml  default.toml  macro.toml  risk-parity.toml  trend.toml
data/arb/: pm-scan-2026-04-17.md
data/strategies/: fraud-detector-results.yaml  k1-k3-k4-results.txt  m1-m3-results.txt
data/strategies/a1-cu-au-ratio-equity-lead/: hypothesis.yaml
data/strategies/a3-dxy-commodity-underperformance/: hypothesis.yaml
data/strategies/a6-eem-spy-momentum-divergence/: hypothesis.yaml
docs/architecture/: polymarket-track.md
docs/beads-backup/: beads-export.jsonl
docs/governance/: alpha-hunting-framework.md  community-lab-roadmap.md  control-matrix.md  model-promotion-policy.md  quant-lifecycle.md  research-tracks.md  track-c-plan.md
docs/investigations/: apr01-whipsaw.md  cadence-gap-audit-2026-04-17.md  capital-deployment-diagnosis.md  dormant-paper-strategies.md  stash-cleanup-followup.md  stash-review-apr17.md
docs/reports/: paper-trading-status-2026-03-31.md  paper-trading-status-2026-04-22.md  paper-trading-status-2026-04-24.md  paper-trading-status-2026-04-29.md  session-summary-2026-04-24.md
docs/research/: 2026-03-26-session.md  backtest-queue-2026-03-31.md  capital-scenarios.md  extreme-sharpe-playbook.md  f27-f31-hypotheses.yaml  f32-f36-hypotheses.yaml  f37-f41-hypotheses.md  hypothesis-registry-2026-03-31.md  implementation-gaps.md  institutional-quant-guide.md  niche-arb-research.md  pm-02-viral-claim-reconstruction.md  polymarket-replay-backtest-framework.md  polymarket-research-module-design.md  polymarket-research-program.md  polymarket-systematic-trading-research.md  polymarket-trading-infrastructure.md  portfolio-correlation-analysis-2026-03-31.md
docs/strategy/: platform-strategic-review-2026-04-24.md
reports/: README.md
reports/daily/: 2026-03-24.md  2026-03-25.md  2026-03-26.md  2026-03-27.md  2026-03-30.md  2026-03-31.md  2026-04-01.md  2026-04-02.md  2026-04-03.md  2026-04-06.md  2026-04-07.md
reports/monthly/: 2026-03.md
reports/weekly/: 2026-W13.md  2026-W14.md
research/: manifest.json
research/prompts/: 1.1-optimal-order-timing.md  1.2-atr-vs-execution-risk.md  1.3-signal-decay-24h-markets.md  2.1-fomc-sentiment-regime-signal.md  2.2-reddit-contrarian-signal.md  2.3-cot-positioning-commodities.md  3.1-dynamic-correlation-limits.md  3.2-atr-risk-budgeting.md  3.3-portfolio-cvar-constraints.md  4.1-contrastive-regime-embeddings.md  4.2-sparse-autoencoder-factors.md  4.3-rag-analogical-reasoning.md  5.1-multifactor-regime-hmm.md  5.2-cross-asset-momentum-crash.md  5.3-commodity-supercycle-inflation.md
research/results/: SYNTHESIS.md  domain-1-analysis.md  domain-2-analysis.md  domain-3-analysis.md  domain-5-analysis.md
scripts/: _pm_recon.py  backtest_consumer_xly_xlp_v2.py  backtest_d10_xlk_xle_soxl.py  backtest_d11_soxx_soxl.py  backtest_d12_tip_tlt_upro.py  backtest_d13_tsmom_upro.py  backtest_d14_disinflation_tqqq.py  backtest_d15_vol_regime_tqqq.py  backtest_d16_commodity_carry_soxl.py  backtest_d17_erp_valuation_upro.py  backtest_f28_country_xsmom.py  backtest_f29_bond_vol_regime.py  backtest_f30_erp_regime.py  backtest_f31_factor_xsmom.py  backtest_f32_growth_value.py  backtest_f33_reit_divergence.py  backtest_f33_reit_divergence_v2.py  backtest_f34_range_compression.py  backtest_f35_cyclical_defensive.py  backtest_f36_vix_term_structure.py  backtest_f37_volume_divergence.py  backtest_f38_vol_transmission.py  backtest_f39_equity_bond_corr.py  backtest_f40_metals_miners.py  backtest_f41_fx_carry.py  backtest_f42_dividend_yield.py  backtest_f43_multi_asset_regime.py  backtest_f44_semi_capex.py  backtest_f45_transport.py  backtest_f46_biotech_risk.py  backtest_f46_biotech_risk_v2.py  backtest_f47_homebuilder.py  backtest_f48_bank_health.py  backtest_f49_breadth.py  backtest_f50_beta_rotation.py  backtest_ief_tqqq_sprint.py  backtest_soxx_tqqq_sprint.py  backtest_vcit_tqqq_sprint.py  batch_phase1_backtest.py  build_context.py  (+224 more)
src/llm_quant/: __init__.py  cli.py  config.py
tests/: conftest.py  test_arb_execution.py  test_arb_paper_gate.py  test_cef_strategy.py  test_execution_bridge.py  test_funding_rates.py  test_hrp_weights.py  test_performance_metrics.py  test_pm02_research.py  test_pm_arb.py  test_pm_recorder.py  test_signal_aggregator.py  test_track_c_robustness.py  test_track_router.py
tests/test_arb/: test_basis.py  test_negrisk_arb.py  test_pm_data.py  test_polymarket_clients.py
tests/test_backtest/: test_artifacts.py  test_engine.py  test_meta_filter.py  test_metrics.py  test_nlp_strategy.py  test_regime_overlay.py  test_robustness.py  test_track_c_gates.py
tests/test_brain/: test_parser.py
tests/test_data/: test_edgar_fetcher.py  test_fomc_fetcher.py  test_indicators.py  test_multi_asset.py  test_nlp_classifier.py
tests/test_db/: test_integrity.py
tests/test_pods/: conftest.py  test_config.py  test_meta_monitor.py  test_pod_isolation.py  test_schema_migration.py
tests/test_risk/: test_cvar.py  test_dcc_garch.py  test_risk.py  test_track_c_risk.py
tests/test_scripts/: test_track_d_risk_monitor.py  test_whipsaw_guards.py
tests/test_surveillance/: test_detectors.py  test_track_c_detectors.py
tests/test_trading/: test_performance.py  test_portfolio.py
(+607 files in other folders)
