[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-quant"
version = "0.1.0"
description = "LLM-powered paper trading system where Claude acts as portfolio manager"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "45ck" }]
keywords = ["llm", "quant", "paper-trading", "claude", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "anthropic>=0.39.0",
    "duckdb>=1.1.0",
    "polars>=1.0.0",
    "yfinance>=0.2.40",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.9.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]
dashboard = [
    "streamlit>=1.38.0",
    "plotly>=5.24.0",
]

[project.scripts]
pq = "llm_quant.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_quant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
