[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-quant"
version = "0.1.0"
description = "LLM-powered paper trading system where Claude acts as portfolio manager"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "45ck" }]
keywords = ["llm", "quant", "paper-trading", "claude", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "anthropic>=0.39.0",
    "duckdb>=1.1.0",
    "polars>=1.0.0",
    "yfinance>=0.2.40",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.9.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "jinja2>=3.1.0",
    "scipy>=1.12.0",
    "pyyaml>=6.0.0",
    "numpy>=1.26.0",
    "empyrical-reloaded>=0.5.5",
    "alphalens-reloaded>=0.4.6",
    "arch>=7.0",
    "Riskfolio-Lib>=6.0",
    "hmmlearn>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
dashboard = [
    "streamlit>=1.38.0",
    "plotly>=5.24.0",
]

[project.scripts]
pq = "llm_quant.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_quant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# ── noslop quality gates ──────────────────────────────────────────────

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",      # docstring rules — enable when the project matures
  "ANN",    # type annotation rules — use mypy for this
  "COM812", # trailing comma (conflicts with formatter)
  "ISC001", # implicit string concat (conflicts with formatter)
  "S101",   # assert — used intentionally in production for invariants
  "PLC0415",# deferred imports — CLI pattern to speed up startup
  "PLR2004",# magic values — acceptable in financial domain (percentages, thresholds)
  "RUF001", # ambiguous unicode — false positives on currency symbols
  "RUF002", # ambiguous unicode in docstrings
  "RUF003", # ambiguous unicode in comments
  "EM102",  # f-string in exception — readability over stack traces
  "TRY003", # raise vanilla args — over-abstraction for a small codebase
  "S608",   # SQL injection — false positive on parameterized queries with placeholders
  "FBT001", # boolean positional args — acceptable for simple flags
  "FBT003", # boolean positional value in call
  "S311",   # non-crypto random — used for non-security purposes
  "TC001",  # typing-only imports — adds complexity for little benefit here
  "TC002",  # typing-only third-party imports
  "TC003",  # typing-only stdlib imports
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",    # asserts are the whole point of tests
  "PLR2004", # magic values in test assertions are fine
  "PT018",   # composite assertions — acceptable in tests
  "PLR0913", # test helpers may have many args for flexibility
  "ARG002",  # test stubs may not use all ABC args
  "SLF001",  # tests need to access private members
  "ERA001",  # section dividers in test files are useful
  "PLR0133", # constant comparisons in tests are intentional assertions
  "PLC0206", # dict iteration patterns fine in tests
  "PERF401", # performance not critical in tests
  "E402",    # imports after conditional skip markers
]
"scripts/**/*.py" = [
  "INP001",  # scripts are standalone, not packages
  "T201",    # scripts use print() for user-facing output
  "E501",    # analysis scripts allow long lines for readability
  "BLE001",  # broad exception catching fine in analysis scripts
  "PTH123",  # open() fine in scripts
  "PLR0913", # analysis scripts may have many CLI args
  "PLR0915", # analysis scripts may have many statements
  "PLR0911", # analysis scripts may have many return statements
  "PLR0913", # analysis scripts may have many args
  "C901",    # walk-forward loops are inherently complex
  "ARG001",  # scripts may have unused args for interface consistency
  "ARG002",  # inline classes may not use all ABC args
  "RUF059",  # unused unpacked vars fine in scripts
  "FBT002",  # boolean defaults fine in script helpers
  "DTZ011",  # date.today() fine in standalone scripts
  "DTZ005",  # datetime without tz fine in scripts
  "ERA001",  # commented-out code fine in analysis scripts
  "N806",    # uppercase variable names (Z for linkage) fine in math scripts
  "N813",    # camelCase fine in scripts
  "TRY300",  # try-except-raise fine in scripts
  "TRY301",  # raise in except handler fine
  "TRY401",  # logger.exception with exc arg fine
  "TRY004",  # prefer TypeError fine in scripts
  "NPY002",  # legacy numpy random fine in scripts
  "S110",    # try-except-pass fine in scripts
  "S310",    # audit URL open fine in scripts
  "SIM102",  # collapsible if fine in scripts
  "SIM108",  # ternary fine in scripts
  "PERF401", # manual list append fine in scripts
  "PERF403", # manual dict copy fine in scripts
]
"src/llm_quant/arb/**/*.py" = [
  "BLE001",  # broad exception catching is intentional in API parsing code
  "FBT002",  # boolean defaults fine in API client config methods
  "PLR0913", # data ingestion functions may have many parameters
  "TRY401",  # logger.exception with exc arg fine in error handlers
  "T201",    # print_report() is an intentional display utility — print() is correct
]
"src/llm_quant/backtest/engine.py" = [
  "PLR0913", # engine.run() needs many params by design
  "PLR0912", # backtest loop has many branches by nature
  "C901",    # backtest loop is inherently complex
  "PLR0915", # backtest loop has many statements
  "E501",    # long log lines
]
"src/llm_quant/backtest/strategies.py" = [
  "PLR0912", # regime strategy has many conditional branches
  "PLR0911", # complex strategies have many return paths
  "PLR0915", # strategy generate_signals can be long
  "C901",    # regime strategy is inherently complex
  "ARG002",  # ABC contract requires all params even if unused
  "E501",    # long f-string reasoning messages are more readable on one line
  "E741",    # single-letter vars (l, s) fine in list comprehensions
  "PERF401", # manual list append fine for signal construction
  "B905",    # zip() without strict= fine in internal iteration
  "SIM102",  # nested ifs fine for readability in complex signals
  "BLE001",  # broad exception in optional features
]
"src/llm_quant/backtest/strategy.py" = [
  "ARG002",  # reference impl may not use all ABC params
]
"src/llm_quant/risk/*.py" = [
  "PLR0913", # risk check functions need many parameters
  "PLR0915", # complex risk managers have many statements
  "BLE001",  # broad exception in estimation fallbacks
  "ARG001",  # interface consistency for check functions
  "TRY300",  # try-except-raise fine in risk code
  "TRY301",  # abstract raise fine
  "TRY401",  # logger.exception with exc fine
  "FBT002",  # boolean defaults fine in config
  "N806",    # uppercase vars for math notation
  "E501",    # long log/message lines
  "PERF401", # manual list append fine
]
"src/llm_quant/backtest/robustness.py" = [
  "N806",    # T, N, S are standard mathematical notation (PBO/CPCV)
  "PLR0913", # run_robustness_gate needs all gate inputs
  "PLR0912", # robustness checking has many branches
  "BLE001",  # broad exception fine in robustness loop
  "E501",    # long log lines
]
"src/llm_quant/backtest/walk_forward.py" = [
  "PLR0913", # walk-forward needs many params
  "BLE001",  # broad exception fine in walk-forward
  "E501",    # long log messages
  "TRY401",  # logger.exception with exc fine
  "DTZ011",  # date.today() fine
]
"src/llm_quant/backtest/nlp_signal_strategy.py" = [
  "ARG002",  # ABC contract
  "BLE001",  # broad exception in API call
  "E501",    # long prompt strings
]
"src/llm_quant/backtest/metrics.py" = [
  "FBT002",  # annualize=True is a clear named boolean
]
"src/llm_quant/brain/*.py" = [
  "E501",    # long prompt strings and context lines
  "BLE001",  # broad exception in API calls
  "ARG001",  # interface consistency
  "ARG002",  # interface consistency
  "ERA001",  # commented-out prompts kept for reference
  "N806",    # uppercase vars for fallback constants
  "TRY300",  # try-except-raise fine
  "FBT002",  # boolean defaults fine
  "S110",    # try-except-pass fine (optional features)
]
"src/llm_quant/data/*.py" = [
  "BLE001",  # broad exception in data fetching
  "S310",    # audit URL open — FRED/COT endpoints are safe
  "TRY300",  # try-except-raise fine
  "TRY401",  # logger.exception with exc fine
  "DTZ011",  # date.today() fine in data fetchers
  "FBT002",  # boolean defaults fine
  "ERA001",  # commented-out code kept for reference
]
"src/llm_quant/nlp/*.py" = [
  "BLE001",  # broad exception in external API calls
  "E501",    # long prompt strings
  "S310",    # audit URL open — SEC EDGAR is safe
  "ERA001",  # commented-out code kept for reference
  "TRY300",  # try-except-raise fine
  "SIM102",  # nested ifs fine for readability
  "DTZ011",  # date.today() fine
  "PERF403", # dict comprehension fine
  "TRY004",  # TypeError fine
  "TRY301",  # abstract raise fine
]
"src/llm_quant/regime/*.py" = [
  "BLE001",  # broad exception in HMM fitting
  "ARG001",  # interface consistency
  "E501",    # long lines in math
  "PLR0911", # many returns for regime classification
]
"src/llm_quant/signals/*.py" = [
  "E501",    # long formula lines
  "PLR0911", # multi-mode signals have many returns
  "BLE001",  # broad exception in signal generation
  "DTZ011",  # date.today() fine
  "SIM108",  # ternary fine
]
"src/llm_quant/surveillance/*.py" = [
  "E501",    # long alert messages
  "BLE001",  # broad exception in detectors
  "FBT002",  # boolean defaults fine
  "PLR0911", # detectors have many return paths
  "PLR0913", # detector functions need many params
  "TRY300",  # try-except-raise fine
  "ARG001",  # config param reserved for future use
  "ARG002",  # interface consistency
]
"src/llm_quant/analysis/*.py" = [
  "BLE001",  # broad exception in analysis
  "E501",    # long analysis lines
  "ARG002",  # interface consistency
  "ERA001",  # commented-out code kept for reference
]
"src/llm_quant/db/integrity.py" = [
  "PLR0913", # compute_trade_hash needs all trade fields for hash input
]

[tool.ruff.lint.mccabe]
max-complexity = 13

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 15
max-statements = 65
max-returns = 6
max-bool-expr = 4

[tool.mypy]
strict = true
ignore_missing_imports = true
